--- a/curso-03/mao-na-massa/mao-na-massa-02/index.html
+++ b/curso-03/mao-na-massa/mao-na-massa-02/index.html
@@ -7,6 +7,8 @@
 
     <title>Juscélia de Souza | Portfolio</title>
 
+    <link rel="shortcut icon" href="https://github.com/jusceliadesouza.png" type="image/x-icon" />
+
     <link rel="stylesheet" href="styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
