:reclycle: refactor: header and footer tags in index.html, update CSS styles

--- a/curso-03/mao-na-massa/mao-na-massa-02/index.html
+++ b/curso-03/mao-na-massa/mao-na-massa-02/index.html
@@ -20,10 +20,10 @@
   </head>
 
   <body>
-    <header class="">
+    <header>
       <h1>Portfolio</h1>
 
-      <nav class="">
+      <nav>
         <a href="#sobre">Sobre</a>
         <a href="#projetos">Projetos</a>
         <a href="#contato">Contato</a>
@@ -38,9 +38,7 @@
         </h1>
 
         <p>
-          Olá! Sou Juscélia de Souza, desenvolvedora Front-end com especialidade
-          em React, Typescript, Javascript, HTML e CSS. Ajudo pequenos negócios
-          e designers a colocarem em prática boas ideias. Vamos conversar?
+          Olá! Sou <span>Juscélia de Souza</span>, desenvolvedora Front-end com especialidade em <span>React, Typescript, Javascript, HTML e CSS</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span>Vamos conversar?</span>
         </p>
 
         <div class="buttons">
@@ -57,7 +55,7 @@
       />
     </main>
 
-    <footer class="">
+    <footer>
       <p>
         &copy; 2023 Desenvolvido por
         <a href="linkedin.com/in/jusceliadesouza">Juscélia de Souza</a>
