--- a/curso-03/mao-na-massa/mao-na-massa-02/index.html
+++ b/curso-03/mao-na-massa/mao-na-massa-02/index.html
@@ -7,7 +7,11 @@
 
     <title>Juscélia de Souza | Portfolio</title>
 
-    <link rel="shortcut icon" href="https://github.com/jusceliadesouza.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="https://github.com/jusceliadesouza.png"
+      type="image/x-icon"
+    />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -21,43 +25,53 @@
 
   <body>
     <header>
-      <h1>Portfolio</h1>
+      <h1><a href="index.html">Portfolio</a></h1>
 
       <nav>
-        <a href="#sobre">Sobre</a>
+        <a href="./pages/about.html">Sobre</a>
         <a href="#projetos">Projetos</a>
         <a href="#contato">Contato</a>
       </nav>
     </header>
 
-    <main>
-      <div class="container">
-        <h1 class="title-container">
-          Eleve seu negócio digital
-          a outro nível <span>com um Front-end de qualidade!</span>
-        </h1>
+    <main class="container">
+      <div class="content">
+        <div class="content-text">
+          <h1 class="title">
+            Eleve seu negócio digital a outro nível
+            <span>com um Front-end de qualidade!</span>
+          </h1>
 
-        <p>
-          Olá! Sou <span>Juscélia de Souza</span>, desenvolvedora Front-end com especialidade em <span>React, Typescript, Javascript, HTML e CSS</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span>Vamos conversar?</span>
-        </p>
+          <p>
+            Olá! Sou <span>Juscélia de Souza</span>, desenvolvedora Front-end
+            com especialidade em
+            <span>React, Typescript, Javascript, HTML e CSS</span>. Ajudo
+            pequenos negócios e designers a colocarem em prática boas ideias.
+            <span>Vamos conversar?</span>
+          </p>
 
-        <div class="buttons">
-          <a href="https://instagram.com/jusceliadesouzaon" class="button"
-            >Instagram</a
-          >
-          <a href="https://github.com/jusceliadesouza" class="button">GitHub</a>
+          <div class="buttons">
+            <a href="https://linkedin.com/in/jusceliadesouza" class="button"
+              >LinkedIn</a
+            >
+            <a href="https://instagram.com/jusceliadesouzaon" class="button"
+              >Instagram</a
+            >
+            <a href="https://github.com/jusceliadesouza" class="button"
+              >GitHub</a
+            >
+          </div>
+        </div>
+
+        <div class="content-image">
+          <img src="https://github.com/jusceliadesouza.png" alt="" />
         </div>
       </div>
-
-      <img
-        src="https://github.com/jusceliadesouza.png"
-        alt="Foto de uma pessoa"
-      />
     </main>
 
     <footer>
       <p>
-        &copy; 2023 Desenvolvido por
+        &copy; 2024 Desenvolvido por
         <a href="linkedin.com/in/jusceliadesouza">Juscélia de Souza</a>
       </p>
     </footer>
