:lipstick: feat: responsibility

--- a/curso-03/mao-na-massa/mao-na-massa-02/index.html
+++ b/curso-03/mao-na-massa/mao-na-massa-02/index.html
@@ -25,12 +25,11 @@
 
   <body>
     <header>
-      <h1><a href="index.html">Portfolio</a></h1>
+      <h1 class="none"><a href="index.html">Portfolio</a></h1>
 
       <nav>
-        <a href="./pages/about.html">Sobre</a>
-        <a href="#projetos">Projetos</a>
-        <a href="#contato">Contato</a>
+        <a class="active">Home</a>
+        <a href="./pages/about.html">Sobre mim</a>
       </nav>
     </header>
 
