--- a/curso-03/mao-na-massa/mao-na-massa-02/pages/about.html
+++ b/curso-03/mao-na-massa/mao-na-massa-02/pages/about.html
@@ -25,21 +25,20 @@
 
   <body>
     <header>
-      <h1><a href="../index.html">Portfolio</a></h1>
+      <h1 class="none"><a href="../index.html">Portfolio</a></h1>
 
       <nav>
-        <a class="active">Sobre</a>
-        <a href="#projetos">Projetos</a>
-        <a href="#contato">Contato</a>
+        <a href="../index.html">Home</a>
+        <a class="active">Sobre mim</a>
       </nav>
     </header>
 
     <main class="container">
-      <h1 class="title">Sobre mim</h1>
-
       <div class="content">
-        <div class="content-text">
-          <p class="about">
+        <div class="content-text about">
+          <h1 class="title">Sobre mim</h1>
+
+          <p>
             Magna aute proident occaecat voluptate excepteur labore.
             Reprehenderit et ad irure exercitation ipsum ipsum esse ut. Magna
             non enim ipsum ex tempor et. Minim qui esse culpa pariatur commodo
@@ -47,7 +46,7 @@
             quis dolor culpa proident.
           </p>
 
-          <p class="about">
+          <p>
             Adipisicing magna ex laboris id. Laborum cupidatat commodo sit nisi
             adipisicing exercitation reprehenderit. Reprehenderit esse est
             incididunt qui dolor. Occaecat ea amet esse ut commodo fugiat.
@@ -57,21 +56,12 @@
             incididunt. Duis veniam deserunt eiusmod incididunt qui et dolor
             dolor.
           </p>
-
-          <p class="about">
-            Irure et est dolor voluptate proident pariatur officia incididunt in
-            in aliqua sint cupidatat enim. Esse incididunt excepteur
-            reprehenderit aliqua tempor fugiat duis. Sint eu ad est nostrud
-            incididunt exercitation. Pariatur excepteur occaecat nisi laboris
-            voluptate qui id pariatur laborum sint sit aliquip. Est sunt
-            pariatur laborum enim pariatur amet proident. Ut nisi dolore id do
-            ut fugiat consequat velit elit sunt reprehenderit. Sunt cillum
-            eiusmod tempor aliqua aute.
-          </p>
         </div>
-
         <div class="content-image">
-          <img src="https://github.com/jusceliadesouza.png" alt="" />
+          <img
+            src="https://github.com/jusceliadesouza.png"
+            alt="Juscélia de Souza"
+          />
         </div>
       </div>
     </main>
